Fixed scrollbars on canvas field

--- a/front/src/components/ImageField/ImageField.css
+++ b/front/src/components/ImageField/ImageField.css
@@ -3,7 +3,7 @@
   display: flex;
   width: 100%;
   height: 100%;
-  overflow: scroll;
+  overflow: auto;
   /* align-items: center; */
   /* justify-content: center; */
   background-color: var(--elementColor);
