--- a/front/src/components/StatusBar/StatusBar.css
+++ b/front/src/components/StatusBar/StatusBar.css
@@ -1,4 +1,5 @@
 .status-bar {
+  align-items: center;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
